# cardioretina-ai

./: .dockerignore  .env.example  .gitignore  DATASET.md  LICENSE  MODEL_CARD.md  README.md  REPRODUCIBILITY.md  pyproject.toml
cardioretina/: __init__.py
cardioretina/api/: __init__.py  app.py  inference.py  schemas.py
cardioretina/data/: __init__.py  augmentation.py  dataset.py  preprocessing.py  split.py  validate.py
cardioretina/evaluation/: __init__.py  ablation.py  evaluate.py  gradcam.py  metrics.py  shap_analysis.py  visualization.py
cardioretina/export/: __init__.py  onnx_export.py
cardioretina/models/: __init__.py  clinical_network.py  efficientnet_backbone.py  hybrid_model.py  vit_module.py
cardioretina/training/: __init__.py  train.py
cardioretina/utils/: __init__.py  config.py  seed.py
config/: default.yaml
docker/: Dockerfile  docker-compose.yml
docs/: 01-project-overview.md  02-research-prototype-disclaimer.md  03-problem-statement.md  04-retinal-fundus-motivation.md  05-hybrid-architecture.md  06-clinical-data-fusion.md  07-gradcam-explainability.md  08-shap-analysis.md  09-dataset-format-guide.md  10-dataset-privacy-ethics.md  11-training-workflow-guide.md  12-evaluation-workflow-guide.md  13-ablation-study.md  14-inference-api-usage.md  15-web-dashboard-guide.md  16-docker-deployment-guide.md  17-local-development-guide.md  18-reproducibility-checklist.md  19-experiment-tracking-notes.md  20-model-limitations.md  21-dataset-bias-discussion.md  22-fairness-considerations.md  23-security-upload-safety.md  24-medical-ai-ethics.md  25-model-card-usage-notes.md  26-expected-outputs.md  27-screenshots-guide.md  28-demo-video-script.md  29-linkedin-launch-post.md  30-github-presentation-guide.md  31-resume-bullet-points.md  32-interview-explanation-notes.md  33-architecture-faq.md  34-troubleshooting-guide.md  35-common-setup-errors.md  36-future-work-roadmap.md  37-publication-readiness-checklist.md  38-research-references-notes.md  39-glossary-medical-ai.md  40-glossary-deep-learning.md  (+5 more)
frontend/: index.html
frontend/static/css/: style.css
frontend/static/js/: app.js
tests/: test_api.py  test_config.py  test_dataset.py  test_gradcam.py  test_metrics.py  test_models.py  test_preprocessing.py
